--- a/portfolio.html
+++ b/portfolio.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>About Me: Joaquin Ignacio Gallardo</title>
+	<title>Portfolio: Joaquin Ignacio Gallardo</title>
 	<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
@@ -10,7 +10,7 @@
 <!-- adding the Your Name section with the About, Portfolio, and Contact -->
 	<header>
 		<div> Joaquin Ignacio Gallardo</div>
-		<nav> <a href="index.html">About</a> | <a href="portfolio.html">Portfolio</a> | <a href=#>Contact</a></nav>
+		<nav> <a href="index.html">About</a> | <a href=#>Portfolio</a> | <a href="contact.html">Contact</a></nav>
 
 	</header>
 
