--- a/contact.html
+++ b/contact.html
@@ -24,14 +24,14 @@
 			<!-- INSERT THE NAME/EMAIL/MESSAGE BOXES AND THE SUBMIT BUTTON AT BOTTOM. -->
 		</div>
 	<!-- box for contact me links -->
-		<div>
+		<aside>
 			Connect with Me 
 			<br>
 			<img src="assets/images/linkedin.png"> 
 			<img src="assets/images/stackoverflow.png"> 
 			<img src="assets/images/github48.png"> 
 
-		</div>
+		</aside>
 
 	</main>
 	
