--- a/portfolio.html
+++ b/portfolio.html
@@ -18,40 +18,40 @@
 
 	<main>
 	<!-- portfolio content box-->
-		<div>
+		<section>
 			Portfolio
 			<br>
-			<!--  -->
+			<!-- ADD CATS AS BACKGROUND IN CSS-->
 			
-			<div>
-			<img src="assets/images/cat1.jpg">
-			</div>
+			<article>
+				<div>Pizza</div>
+			</article>
 			
-			<div>
-				<img src="assets/images/cat2.jpg">
-			</div>
+			<article>
+				<div>Avocado</div>				
+			</article>
 			
-			<div>
-				<img src="assets/images/cat3.jpg">
-			</div>
+			<article>
+				<div>Habanero</div>
+			</article>
 
-			<div>
-				<img src="assets/images/cat4.jpg">
-			</div>
+			<article>
+				<div>Piineapple</div>
+			</article>
 
-			<div>
-				<img src="assets/images/cat5.jpg">
-			</div>
-		</div>
+			<article>
+				<div>Hot sauce</div>
+			</article>
+		</section>
 
-		<div>
+		<aside>
 			Connect with Me 
 			<br>
 			<img src="assets/images/linkedin.png"> 
 			<img src="assets/images/stackoverflow.png"> 
 			<img src="assets/images/github48.png"> 
 
-		</div>
+		</aside>
 
 	</main>
 	
