--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <!-- adding the Your Name section with the About, Portfolio, and Contact -->
 	<header class="head">
-		<div id="hidden"> </div>
+
 		<div class="header1">Joaquin Ignacio Gallardo</div>
 		<nav class="navbar"> <a href=#>About</a>  |  <a href="portfolio.html">Portfolio</a>  |  <a href="contact.html">Contact</a></nav>
 
@@ -23,25 +23,25 @@
 			<h1>About me</h1>
 			<br>
 			<img src="assets/images/Me.jpg" height="200px" width="140px" alt="Joaquin Ignacio Gallardo">
-			<p>After high school I had no intention to go to college, so I spent a year traveling around my home country, Chile. It was during these travels that I focused on reading and reflecting upon how to proceed with life. While on a bus traveling in the northern deserts of Chile, I had an epiphany after observing true third-world poverty when I asked myself why and how countries develop and grow out of poverty. I had resolved to study Economics so that I could work pull people out of poverty.</p>
+			<p>After high school I had no intention to go to college, so I spent a year traveling around my home country, Chile. It was during these travels that I focused on reading and reflecting upon how to proceed with life. While on a bus traveling in the northern deserts of Chile, I had an epiphany after observing true third-world poverty when I asked myself why and how countries develop and grow out of poverty. I had resolved to study Economics so that I could work to pull people out of poverty.</p>
 			<br>
 			<p>After college I was eager to make my impact on the world and found myself working at the US House of Representatives. Here I quickly learned that change doesn't happen from working as a low level staffer nor as a senior staffer, and nearly immediately resolved to find a better opportunity. I stumbled across an opening at a small bank for corporate management training program and found my place in providing lending to small business, which fuels economic growth, job creation, and wealth creation. My next steps after learning are to learn how to apply these skills in the FinTech world so that small business in Latin America may also benefit from these services, therefore helping to raise poor countries out of poverty.</p>
 		</section>
 	<!-- box for contact me links -->
-		<aside>
-			Connect with Me 
+		<aside class="connect">
+			<h2>Connect with Me</h2>
 			<br>
-			<img src="assets/images/linkedin.png"> 
-			<img src="assets/images/stackoverflow.png"> 
-			<img src="assets/images/github48.png"> 
+			<a href="https://linkedin.com/in/joaquingallardo"><img src="assets/images/linkedin.png" alt="Joaquin on linkedin"> </a>
+			<a href="#"><img src="assets/images/stackoverflow.png" alt="Joaquin on Stack Overflow"></a>
+			<a href="kingkeen.github.io"><img src="assets/images/github48.png" alt="Joaquin on GitHub"></a>
 		</aside>
 
 	</main>
 
-	<footer>
-		<div> blue box above grey copywrite </div>
-		<div>&copy; Copyright 2017 Joaquin Ignacio Gallardo</div>
-	</footer>
+<footer>
+	<div> blue box above grey copywrite </div>
+	<div>&copy; Copyright 2017 Joaquin Ignacio Gallardo</div>
+</footer>
 
 </body>
 </html>
