--- a/index.html
+++ b/index.html
@@ -31,16 +31,19 @@
 		<aside class="connect">
 			<h2>Connect with Me</h2>
 			<br>
+			
+			<align = center> 
+
 			<a href="https://linkedin.com/in/joaquingallardo"><img src="assets/images/linkedin.png" alt="Joaquin on linkedin"> </a>
 			<a href="#"><img src="assets/images/stackoverflow.png" alt="Joaquin on Stack Overflow"></a>
 			<a href="kingkeen.github.io"><img src="assets/images/github48.png" alt="Joaquin on GitHub"></a>
+			</align>
 		</aside>
 
 	</main>
 
 <footer>
-	<div> blue box above grey copywrite </div>
-	<div>&copy; Copyright 2017 Joaquin Ignacio Gallardo</div>
+	<div class="footer1">&copy; Copyright 2017 Joaquin Ignacio Gallardo</div>
 </footer>
 
 </body>
