updates almost all but probably just 40 percent sad

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<header class="head">
 
 		<div class="header1">Joaquin Ignacio Gallardo</div>
-		<nav class="navbar"> <a href=#>About</a>  |  <a href="portfolio.html">Portfolio</a>  |  <a href="contact.html">Contact</a></nav>
+		<nav class="navbar"> <a href="index.html">About</a>  |  <a href="portfolio.html">Portfolio</a>  |  <a href="contact.html">Contact</a></nav>
 
 	</header>
 
