--- a/portfolio.html
+++ b/portfolio.html
@@ -8,57 +8,61 @@
 <body>
 
 <!-- adding the Your Name section with the About, Portfolio, and Contact -->
-	<header>
-		<div> Joaquin Ignacio Gallardo</div>
-		<nav> <a href="index.html">About</a> | <a href=#>Portfolio</a> | <a href="contact.html">Contact</a></nav>
+	<header class="head">
+
+		<div class="header1">Joaquin Ignacio Gallardo</div>
+		<nav class="navbar"> <a href=index.html>About</a>  |  <a href="portfolio.html">Portfolio</a>  |  <a href="contact.html">Contact</a></nav>
 
 	</header>
 
 <!-- Big context box with background here -->
 
-	<main>
+	<main class="mainarea">
 	<!-- portfolio content box-->
-		<section>
-			Portfolio
+		<section class="contentbox">
+			<h1>Portfolio</h1>
 			<br>
 			<!-- ADD CATS AS BACKGROUND IN CSS-->
 			
-			<article>
-				<div>Pizza</div>
+			<article class="pizza">
+				<div id="pizza1">Pizza</div>
 			</article>
 			
-			<article>
+			<article class="pizza">
 				<div>Avocado</div>				
 			</article>
 			
-			<article>
+			<article class="pizza">
 				<div>Habanero</div>
 			</article>
 
-			<article>
-				<div>Piineapple</div>
+			<article class="pizza">
+				<div>Pineapple</div>
 			</article>
 
-			<article>
+			<article class="pizza">
 				<div>Hot sauce</div>
 			</article>
 		</section>
 
-		<aside>
-			Connect with Me 
+<!-- box for contact me links -->
+		<aside class="connect">
+			<h2>Connect with Me</h2>
 			<br>
-			<img src="assets/images/linkedin.png"> 
-			<img src="assets/images/stackoverflow.png"> 
-			<img src="assets/images/github48.png"> 
+			
+			<align = center> 
 
+			<a href="https://linkedin.com/in/joaquingallardo"><img src="assets/images/linkedin.png" alt="Joaquin on linkedin"> </a>
+			<a href="#"><img src="assets/images/stackoverflow.png" alt="Joaquin on Stack Overflow"></a>
+			<a href="kingkeen.github.io"><img src="assets/images/github48.png" alt="Joaquin on GitHub"></a>
+			</align>
 		</aside>
 
 	</main>
 	
-	<footer>
-		<div> blue box above grey copywrite </div>
-		<div>&copy; Copyright 2017 Joaquin Ignacio Gallardo</div>
-	</footer>
+<footer>
+	<div class="footer1">&copy; Copyright 2017 Joaquin Ignacio Gallardo</div>
+</footer>
 
 </body>
 </html>
