--- a/contact.html
+++ b/contact.html
@@ -8,37 +8,47 @@
 <body>
 
 <!-- adding the Your Name section with the About, Portfolio, and Contact -->
-	<header>
-		<div> Joaquin Ignacio Gallardo</div>
-		<nav> <a href="index.html">About</a> | <a href="portfolio.html">Portfolio</a> | <a href=#>Contact</a></nav>
+	<header class="head">
+
+		<div class="header1">Joaquin Ignacio Gallardo</div>
+		<nav class="navbar"> <a href=index.html>About</a>  |  <a href="portfolio.html">Portfolio</a>  |  <a href="contact.html">Contact</a></nav>
 
 	</header>
 
 <!-- Big context box with background here -->
 
-	<main>
+	<main class="mainarea">
 	<!-- About me content box-->
-		<div>
-			Contact Me
+		<section class="contentbox">
+			
+			<h2>Contact Me</h2>
 			<br>
 			<!-- INSERT THE NAME/EMAIL/MESSAGE BOXES AND THE SUBMIT BUTTON AT BOTTOM. -->
-		</div>
-	<!-- box for contact me links -->
-		<aside>
-			Connect with Me 
-			<br>
-			<img src="assets/images/linkedin.png"> 
-			<img src="assets/images/stackoverflow.png"> 
-			<img src="assets/images/github48.png"> 
+			<h3>Name</h3>
+			<!--Box for name-->
+			<h3>Email</h3>
+			<!--box for email -->
+			<h3>Message</h3>
+			<!-- box for message -->
+			<h3>Submit form</h3>
 
+		</section>
+	<!-- box for contact me links -->
+		<aside class="connect">
+			<h2>Connect with Me</h2>
+			<br>
+			<align = center> 
+				<a href="https://linkedin.com/in/joaquingallardo"><img src="assets/images/linkedin.png" alt="Joaquin on linkedin"> </a>
+				<a href="#"><img src="assets/images/stackoverflow.png" alt="Joaquin on Stack Overflow"></a>
+				<a href="kingkeen.github.io"><img src="assets/images/github48.png" alt="Joaquin on GitHub"></a>
+			</align>
 		</aside>
 
 	</main>
 	
-	<footer>
-		<div> blue box above grey copywrite </div>
-		<div>&copy; Copyright 2017 Joaquin Ignacio Gallardo</div>
-	</footer>
+<footer>
+	<div class="footer1">&copy; Copyright 2017 Joaquin Ignacio Gallardo</div>
+</footer>
 
 </body>
 </html>
