major updates to borders and background images

--- a/portfolio.html
+++ b/portfolio.html
@@ -25,7 +25,7 @@
 			<!-- ADD CATS AS BACKGROUND IN CSS-->
 			
 			<article class="pizza">
-				<div id="pizza1">Pizza</div>
+				<div class="innerpizza">Pizza</div>
 			</article>
 			
 			<article class="pizza">
