--- a/portfolio.html
+++ b/portfolio.html
@@ -11,7 +11,7 @@
 	<header class="head">
 
 		<div class="header1">Joaquin Ignacio Gallardo</div>
-		<nav class="navbar"> <a href=index.html>About</a>  |  <a href="portfolio.html">Portfolio</a>  |  <a href="contact.html">Contact</a></nav>
+		<nav class="navbar" color=> <a href=index.html>About</a>  |  <a href="portfolio.html">Portfolio</a>  |  <a href="contact.html">Contact</a></nav>
 
 	</header>
 
@@ -28,20 +28,20 @@
 				<div class="innerpizza">Pizza</div>
 			</article>
 			
-			<article class="pizza">
-				<div>Avocado</div>				
+			<article class="avocado">
+				<div class="inneravocado">Avocado</div>				
 			</article>
 			
-			<article class="pizza">
-				<div>Habanero</div>
+			<article class="habanero">
+				<div class="innerhabanero">Habanero</div>
 			</article>
 
-			<article class="pizza">
-				<div>Pineapple</div>
+			<article class="ghostpepper">
+				<div class="innerghost"><a href="#">Ghost Pepper</a></div>
 			</article>
 
-			<article class="pizza">
-				<div>Hot sauce</div>
+			<article class="jalepeno">
+				<div class="innerjalepeno">Jalepeno</div>
 			</article>
 		</section>
 
