fixed links in nav

--- a/portfolio.html
+++ b/portfolio.html
@@ -41,7 +41,7 @@
 			</article>
 
 			<article class="jalepeno">
-				<div class="innerjalepeno">Jalepeno</div>
+				<div class="innerjalepeno">Jalapeno</div>
 			</article>
 		</section>
 
