addition of Viewport and Media tags

--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,7 @@
 	<title>Contact: Joaquin Ignacio Gallardo</title>
 	<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
 
@@ -22,16 +23,19 @@
 		<section class="contentbox">
 			
 			<h2>Contact Me</h2>
-			<br>
 			<!-- INSERT THE NAME/EMAIL/MESSAGE BOXES AND THE SUBMIT BUTTON AT BOTTOM. -->
-			<h3>Name</h3>
-			<!--Box for name-->
-			<h3>Email</h3>
-			<!--box for email -->
-			<h3>Message</h3>
-			<!-- box for message -->
-			<h3>Submit form</h3>
-
+			<form>
+				Name: <br>
+				<input type="text" name="Name"><br>
+				<!--Box for name-->
+				Email:<br>
+				<!--box for email -->
+				<input type="text" name="Email"><br>
+				<!-- box for message -->
+				Message:<br>
+				<input type="text" name="Message"><br>
+				<input type="submit" name="Submit">
+			</form>
 		</section>
 	<!-- box for contact me links -->
 		<aside class="connect">
