--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<title>About Me: Joaquin Ignacio Gallardo</title>
 	<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
 
@@ -11,7 +12,7 @@
 	<header class="head">
 
 		<div class="header1">Joaquin Ignacio Gallardo</div>
-		<nav class="navbar"> <a href="index.html">About</a>  |  <a href="portfolio.html">Portfolio</a>  |  <a href="contact.html">Contact</a></nav>
+		<div class="navbar"> <a href="index.html">About</a>  |  <a href="portfolio.html">Portfolio</a>  |  <a href="contact.html">Contact</a></div>
 
 	</header>
 
